共通ヘッダーのタイトルをリンクに変更

--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -16,7 +16,7 @@ const prop = Astro.props;
   <body>
     <div class={css({backgroundColor: "rgb(20, 24, 33)"})}>
       <div class={container({ maxWidth: "6xl", py: "0.5em" })}>
-        <p class={css({color: "white", fontWeight: "bold", fontSize: "3xl"})}>YUMUの備忘録</p>
+        <a href="/" class={css({color: "white", fontWeight: "bold", fontSize: "3xl"})}>YUMUの備忘録</a>
       </div>
     </div>
 
