記事一覧ページに共通レイアウトを適用

--- a/src/pages/posts/[page].astro
+++ b/src/pages/posts/[page].astro
@@ -1,8 +1,8 @@
 ---
 import type { GetStaticPathsOptions, MDXInstance } from 'astro';
-import { css } from "@styled-system/css";
-import { container, vstack } from "@styled-system/patterns";
+import { vstack } from "@styled-system/patterns";
 import PostCard from "@components/PostCard.astro";
+import SharedLayout from '@/layouts/SharedLayout.astro';
 
 export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
 	const allPosts: MDXInstance<Record<string, any>>[] = await Astro.glob("../../content/blog/**/*.mdx");
@@ -19,21 +19,10 @@ export async function getStaticPaths({ paginate }: GetStaticPathsOptions) {
 const { page } = Astro.props;
 ---
 
-<html lang="ja">
-	<head>
-		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="viewport" content="width=device-width" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
-	</head>
-	<body class={css({backgroundColor: "#eeeeee"})}}>
-		<div class={container({maxWidth: "5xl"})}>
-		<div class={vstack({ gap: '6', width: "100%"})} >
-      {page.data.map(({title, url, updatedDate}) => {
-				return <PostCard title={title} purl={url} updatedDate={updatedDate} />
-      })}
-    </div>
+<SharedLayout>
+	<div class={vstack({ gap: '6', width: "100%"})} >
+		{page.data.map(({title, url, updatedDate}) => {
+			return <PostCard title={title} purl={url} updatedDate={updatedDate} />
+		})}
 	</div>
-	</body>
-</html>
+</SharedLayout>
