--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -1,3 +1,9 @@
+.markdown-body {
+  padding: 2em;
+  background-color: #374151;
+  border-radius: 0.8em;
+  font-weight: 600;
+}
 .markdown-body img.copy-btn {
   padding: 0.3em;
   background-color: transparent !important;
