ブログタイトルを修正

--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -11,7 +11,7 @@ const prop = Astro.props;
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
+    <title>YUMUの備忘録</title>
   </head>
   <body class={css({backgroundColor: "gray.900"})}>
     <div class={css({backgroundColor: "rgb(20, 24, 33)"})}>
