--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -1,6 +1,7 @@
 ---
+import SideBar from "@/components/SideBar.astro";
 import { css } from "@styled-system/css";
-import { container } from "@styled-system/patterns";
+import { container, flex } from "@styled-system/patterns";
 
 const prop = Astro.props;
 ---
@@ -13,15 +14,30 @@ const prop = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>YUMUの備忘録</title>
   </head>
-  <body class={css({backgroundColor: "gray.900"})}>
-    <div class={css({backgroundColor: "rgb(20, 24, 33)"})}>
-      <div class={container({ maxWidth: "6xl", py: "0.5em" })}>
-        <a href="/" class={css({color: "white", fontWeight: "bold", fontSize: "3xl"})}>YUMUの備忘録</a>
+  <body class={css({ backgroundColor: "gray.900", color: "white" })}>
+    <div class={css({ backgroundColor: "rgb(20, 24, 33)" })}>
+      <div class={container({ maxWidth: "7xl", py: "0.5em" })}>
+        <a
+          href="/"
+          class={css({ color: "white", fontWeight: "bold", fontSize: "3xl" })}
+          >YUMUの備忘録</a
+        >
       </div>
     </div>
 
-    <div class={container({ maxWidth: "6xl", pt: "2em" })}>
-      <slot />
+    <div class={container({ maxWidth: "7xl", pt: "2em" })}>
+      <div
+        class={flex({
+          width: "100%",
+          gap: 8
+        })}
+      >
+        <div class={css({ flex: 1 })}>
+          <slot />
+        </div>
+        <SideBar />
+      </div>
     </div>
+
   </body>
 </html>
