--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,23 @@ import { vstack } from "@styled-system/patterns";
 import PostCard from "@components/PostCard.astro";
 import SharedLayout from "src/layouts/SharedLayout.astro";
 
-const allPosts = await Astro.glob("../content/blog/**/*.mdx");
+let allPosts = await Astro.glob("../content/blog/**/*.mdx");
+allPosts = allPosts.sort((a, b) => {
+	return a.frontmatter.updatedDate < b.frontmatter.updatedDate ? 1 : -1;
+});
 ---
 
 <SharedLayout>
-	<div class={vstack({ gap: '6', width: "100%"})} >
-		{allPosts.map((post) => (
-			<PostCard title={post.frontmatter.title} tags={post.frontmatter.tags} purl={post.url} updatedDate={post.frontmatter.updatedDate} />
-		))}
+	<div class={vstack({ gap: "6", width: "100%" })}>
+		{
+			allPosts.map((post) => (
+				<PostCard
+					title={post.frontmatter.title}
+					tags={post.frontmatter.tags}
+					purl={post.url}
+					updatedDate={post.frontmatter.updatedDate}
+				/>
+			))
+		}
 	</div>
 </SharedLayout>
