サイドバーに目次を実装

--- a/src/components/SideBarProfile.astro
+++ b/src/components/SideBarProfile.astro
@@ -4,14 +4,12 @@ import { css } from "@styled-system/css";
 
 <div
   class={css({
-    display: ["none", "none", "none", "block"],
     backgroundColor: "#374151",
     borderRadius: "0.8em",
     fontWeight: 600,
     padding: "0.5em",
-    width: "350px",
-    minHeight: "400px",
-    height: "100%",
+    width: "100%",
+    height: "200px",
   })}
 >
   <p>趣味で扱った技術や作成したアプリについて、備忘録として書いていきます。</p>
