astrojsとその他のパッケージをアップデート

--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -5,6 +5,8 @@ import { css } from "@styled-system/css";
 import { container, flex } from "@styled-system/patterns";
 import type { MarkdownHeading } from "astro";
 
+import '@/index.css';
+
 interface Props {
   headings?: MarkdownHeading[];
 }
