--- a/src/layouts/SharedLayout.astro
+++ b/src/layouts/SharedLayout.astro
@@ -33,7 +33,7 @@ const { headings } = Astro.props;
       </div>
     </div>
 
-    <div class={container({ maxWidth: "8xl", pt: "2em" })}>
+    <div class={container({ maxWidth: "8xl", pt: "2em", mb: "4em" })}>
       <div
         class={flex({
           width: "100%",
