--- a/src/styles/override.css
+++ b/src/styles/override.css
@@ -8,10 +8,6 @@
   background-color: transparent !important;
 }
 
-.markdown-body img.copy-btn:hover {
-  background-color: rgba(200, 200, 200, 0.4) !important;
-}
-
 .markdown-body a {
   color: #93c5fd;
 }
@@ -21,5 +17,5 @@
 }
 
 .markdown-body pre.astro-code {
-  padding: 0 1em !important;
+  padding: 1em 1em !important;
 }
